--- a/Budget/Budget.csproj
+++ b/Budget/Budget.csproj
@@ -53,11 +53,20 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Mutual.cs" />
+    <Compile Include="NoteWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NoteWindow.Designer.cs">
+      <DependentUpon>NoteWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NoteWindow.resx">
+      <DependentUpon>NoteWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
