--- a/Budget/Budget.csproj
+++ b/Budget/Budget.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Filib">
+      <HintPath>..\..\Filib\Filib\bin\Debug\Filib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
